--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -38,7 +38,7 @@ a:hover {
 
 body {
   color: black;
-  font-family: 'Inter', monospace;
+  font-family: 'Ubuntu', monospace;
   font-size: 18px;
   line-height: 1.4;
   margin: 0;
