--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,8 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Ubuntu&display=swap');
-    //font-family: 'Inter', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=IBM+Plex+Mono&family=Inter&family=JetBrains+Mono&family=Literata&display=swap');
+/*
+    font-family: 'Barlow', sans-serif;
 
-    //font-family: 'Ubuntu', sans-serif;
+    font-family: 'IBM Plex Mono', monospace;
 
+    font-family: 'Inter', sans-serif;
+
+    font-family: 'JetBrains Mono', monospace;
+
+    font-family: 'Literata', serif;*/
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   filter: invert(1);
@@ -30,7 +36,7 @@ html { height: 100%; }
 
 a {
   text-decoration: none;
-  color: #2e7bbf;
+  color: #84a34a;
 }
 a:hover {
   color: #336c86;
@@ -38,8 +44,8 @@ a:hover {
 
 body {
   color: black;
-  font-family: 'Ubuntu', monospace;
-  font-size: 18px;
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 20px;
   line-height: 1.4;
   margin: 0;
   min-height: 100%;
@@ -55,7 +61,7 @@ p { margin: 1rem 0; }
 
 li { margin: 0.4rem 0; }
 
-*:target { background: yellow; }
+*:target { background: none; }
 
 .w {
   width: fit-content;
