--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -25,6 +25,7 @@ body[a="dark"] { @include dark-appearance; }
 @media (prefers-color-scheme: dark) {
   body[a="auto"] { @include dark-appearance; }
 }
+
 // -------------------------------------------- //
 
 // bg color is also needed in html in order to
@@ -45,7 +46,7 @@ a:hover {
 body {
   color: black;
   font-family: 'JetBrains Mono', monospace;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.4;
   margin: 0;
   min-height: 100%;
@@ -110,4 +111,13 @@ img {
   max-width: 100%;
   display: block;
   margin: 0 auto;
+}
+
+@media (max-width : 574px){
+    body {
+        font-size: 16px;
+        line-height: 1.2;
+        margin: 0;
+        min-height: 100%;
+    }
 }
