--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -42,9 +42,11 @@ a:hover {
   color: #336c86;
 }
 
-//h1 {
-    //text-align: center;
-//}
+h1 {
+    text-align: center;
+    text-transform: Uppercase;
+    font-family: 'Inter', monospace;
+}
 
 body {
   color: black;
