--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,15 @@ layout: default
 ---
 
 {%-include back_link.html-%}
-
-<article>
+<div>
+<article class='card'>
+<h1>{{ page.title }}</h1>
   <p class="post-meta">
     <time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>
   </p>
   
-  <h1>{{ page.title }}</h1>
+
 
   {{ content }}
 </article>
+</div>
